Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -146,7 +146,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'\n"
+    "x = \"art vandelay\" # 'Art Vandelay'\n",
+    "print(x.)"
    ]
   },
   {
