Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -140,20 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Art Vandelay\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "x = \"art vandelay\" # 'Art Vandelay'\n",
-    "print(x.title())"
+    "print(x.)"
    ]
   },
   {
@@ -171,7 +165,7 @@
    },
    "outputs": [],
    "source": [
-    "\"Ceo\" # 'CEO'\n"
+    "\"Ceo\" # 'CEO'"
    ]
   },
   {
