Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,13 +165,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CEO'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"Ceo\" # 'CEO'\n"
+    "\"Ceo\" # 'CEO'\n",
+    "\"Ceo\".upper()"
    ]
   },
   {
@@ -189,7 +199,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "\"art.vandelay@vandelay.co\" # False\n",
+    "print"
    ]
   },
   {
