--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,8 @@
    "outputs": [],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "print"
+    "def check(string):\n",
+    "    if"
    ]
   },
   {
