Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "def check(string):\n",
-    "    if"
+    "    if string[-3:] == 'com'"
    ]
   },
   {
