Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,9 @@
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "def check(string):\n",
-    "    if string[-3:] == 'com'"
+    "    if string[-4:] == '.com':\n",
+    "        return True\n",
+    "    print(string[-4:])"
    ]
   },
   {
