Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,17 +193,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y.co\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "def check(string):\n",
     "    if string[-4:] == '.com':\n",
     "        return True\n",
-    "    print(string[-4:])"
+    "    print(string[-4:])\n",
+    "    return False\n",
+    "check(\"art.vandelay@vandelay.co\")"
    ]
   },
   {
