Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,6 @@
     "def check(string):\n",
     "    if string[-4:] == '.com':\n",
     "        return True\n",
-    "    print(string[-4:])\n",
     "    return False\n",
     "check(\"art.vandelay@vandelay.co\")"
    ]
@@ -240,7 +239,8 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "'vandelay.com' # 'www.vandelay.com'\n",
+    "w"
    ]
   },
   {
