Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -232,25 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'www.vandelay.com'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'vandelay.com' # 'www.vandelay.com'\n",
-    "'www.'+'vandelay.com'"
+    "w"
    ]
   },
   {
@@ -275,7 +265,7 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 728\n"
+    "\"7285553334\" # 728"
    ]
   },
   {
